# zpwrchrome

./: .gitattributes  .gitignore  README.md  background.js  manifest.json  package.json  popup.css  popup.html  popup.js
.github/workflows/: ci.yml  release-host.yml
browserpass-host-rs/: Cargo.toml  README.md
browserpass-host-rs/docs/: index.html  port_report.html
browserpass-host-rs/src/: lib.rs
browserpass-host-rs/src/extensions/: dl.rs  otp.rs  search.rs
browserpass-host-rs/src/ported/errors/: errors.rs  mod.rs
browserpass-host-rs/src/ported/helpers/: helpers.rs  mod.rs
browserpass-host-rs/src/ported/request/: configure.rs  fetch.rs  save.rs
browserpass-host-rs/src/ported/response/: response.rs
browserpass-host-rs/src/ported/version/: mod.rs
browserpass-host-rs/tests/: extensions_dl_integration.rs  extensions_dl_state.rs  extensions_otp.rs  extensions_search.rs  frame_roundtrip.rs  live_password_store.rs  ported_common.rs  ported_configure_helpers.rs  ported_errors.rs  ported_helpers.rs  ported_integration.rs  ported_version.rs
docs/: index.html  report.html
host/: Cargo.toml  install.sh
host/Formula/: zpwr-chrome-host.rb
host/src/: dispatch.rs  dl.rs  frame.rs  lib.rs  main.rs  pass.rs  proto.rs
host/tests/: dl_integration.rs  dl_unit.rs  echo_integration.rs  frame_roundtrip.rs  pass_unit.rs
lib/: bp-pass.js  color-schemes.js  cyber-theme-css.js  diag.js  dl-batch.js  dl-postcommands.js  find-snippet.js  fzf.js  geo-data.js  gm-shim.js  identity-tokens.js  json-format.js  lights-off-css.js  modheader.js  page-nav.js  palette-cmds.js  pass-entry.js  reader-mode-css.js  screenshot.js  totp.js  ua-presets.js  ui-scheme.js  userscript.js  util.js  xml-format.js  zcite-extract.js  zpc-palette.js
lib/wappalyzer/: engine.js
modal/: content.js  content.template.js  cyber-theme.js  json-viewer.js  lights-off.js  reader-mode.js  xml-viewer.js
scripts/: build-modal.mjs  build-modal.sh  gen-readme.sh  gen.mjs  gen.sh  vendor-wappalyzer.sh
scripts-manager/: dashboard.css  dashboard.html  dashboard.js  dl-about.html  dl-about.js  dl-diag.html  dl-diag.js  dl-extfilter.html  dl-extfilter.js  dl-help.html  dl-help.js  dl-interface.html  dl-interface.js  dl-postcommands.css  dl-postcommands.html  dl-postcommands.js  dl-rules.html  dl-rules.js  dl-settings.css  dl-settings.html  dl-settings.js  downloads.css  downloads.html  downloads.js  find-all.css  find-all.html  find-all.js  host.css  host.html  host.js  lights-off.css  lights-off.html  lights-off.js  manager.css  manager.html  manager.js  modheader.css  modheader.html  modheader.js  pass.css  (+11 more)
tests/: background.test.js  bp-pass-domain-candidates.test.js  build-scene-restorable.test.js  build.test.js  buildscene-slugify-edge.test.js  buildscene-timing.test.js  ci.test.js  close-tabs-more.test.js  color-schemes.test.js  commands.test.js  configure-world.test.js  copy-helpers.test.js  cyber-theme-css.test.js  dashboard.test.js  dispatch-popup.test.js  dispatch-tab-ops.test.js  dl-batch.test.js  dl-integration.test.js  dl-postcommands.test.js  docs-index.test.js  domain-hue-distribution.test.js  domain-hue-unit.test.js  expand-match-unit.test.js  find-snippet.test.js  fire-log-handlers.test.js  firelog-init.test.js  flatten-tree-deep-iterative.test.js  flatten-tree-unit-more.test.js  frecency-edge-unit.test.js  frecency-extremes.test.js  fuzz-adversarial.test.js  fuzz-fzf.test.js  fuzz-monte-carlo-scenes.test.js  fuzz-userscript.test.js  fuzz-util.test.js  fzf-constants.test.js  fzf-highlight-integration.test.js  fzf-highlight-more.test.js  fzf-match-edge.test.js  fzf-more.test.js  (+151 more)
theme/: Cached Theme.pak  README.md  manifest.json
zpwrchrome-host/: Cargo.toml  README.md
zpwrchrome-host/Formula/: zpwrchrome-host.rb
zpwrchrome-host/docs/: index.html  port_report.html
zpwrchrome-host/src/: diag.rs  frame.rs  lib.rs
zpwrchrome-host/src/extensions/: dl.rs  host.rs  mod.rs  otp.rs  run_command.rs  search.rs  zcite.rs
zpwrchrome-host/src/ported/: mod.rs
zpwrchrome-host/src/ported/errors/: errors.rs
zpwrchrome-host/src/ported/helpers/: helpers.rs
zpwrchrome-host/src/ported/request/: common.rs  configure.rs  delete.rs  fetch.rs  list.rs  mod.rs  process.rs  save.rs  tree.rs
zpwrchrome-host/src/ported/response/: mod.rs  response.rs
zpwrchrome-host/src/ported/version/: version.rs
zpwrchrome-host/tests/: extensions_dl_integration.rs  extensions_dl_state.rs  extensions_otp.rs  extensions_run_command.rs  extensions_search.rs  frame_roundtrip.rs  live_password_store.rs  ported_common.rs  ported_configure_helpers.rs  ported_errors.rs  ported_helpers.rs  ported_integration.rs  ported_version.rs
(+2 files in other folders)
