[package]
name = "zpwr-chrome-host"
version = "0.2.0"
edition = "2021"
authors = ["MenkeTechnologies"]
description = "Native messaging host for zpwrchrome — pass + downloads"
license = "MIT"

[lib]
name = "zpwr_chrome_host"
path = "src/lib.rs"

[[bin]]
name = "zpwr-chrome-host"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP/HTTPS for the segmented download manager. ureq 2.x is the smallest
# foundational pure-Rust HTTP/1.1 client; rustls feature avoids OS TLS
# (works on macOS, Linux, future archs without recompile). Vendorable.
ureq = { version = "2.10", default-features = false, features = ["tls", "native-certs"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
